--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tsc -p .",
     "deploy": "gcloud app deploy --project=excalidraw-io",
     "start": "node index.js"
   },
   "license": "MIT",
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "socket.io": "2.3.0",
+    "typescript": "3.8.3"
+  },
+  "devDependencies": {
+    "@types/express": "4.17.3",
+    "@types/socket.io": "2.1.4"
   }
 }
