--- a/package.json
+++ b/package.json
@@ -1,13 +1,4 @@
 {
-  "name": "excalidraw-io",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc -p .",
-    "deploy": "yarn build && gcloud app deploy --project=excalidraw-io",
-    "start": "yarn build && node index.js"
-  },
-  "license": "MIT",
   "dependencies": {
     "express": "4.17.1",
     "socket.io": "2.3.0",
@@ -16,5 +7,16 @@
   "devDependencies": {
     "@types/express": "4.17.3",
     "@types/socket.io": "2.1.4"
-  }
+  },
+  "license": "MIT",
+  "main": "index.js",
+  "name": "excalidraw-io",
+  "scripts": {
+    "deploy": "yarn gcp-build && gcloud app deploy --project=excalidraw-io",
+    "gcp-build": "tsc -p .",
+    "prepare": "npm run gcp-build",
+    "pretest": "npm run gcp-build",
+    "start": "yarn gcp-build && node index.js"
+  },
+  "version": "1.0.0"
 }
