--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@types/express": "4.17.3",
     "@types/socket.io": "2.1.4"
   },
+  "engines": {
+    "node": "12.x"
+  },
   "license": "MIT",
   "main": "index.js",
   "name": "excalidraw-io",
