--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "@types/express": "4.17.3",
+    "@types/node": "13.9.0",
     "@types/socket.io": "2.1.4"
   },
   "engines": {
