--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
-  "name": "excalidraw-io",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "deploy": "gcloud app deploy --project=excalidraw-io",
-    "start": "node index.js"
+  "dependencies": {
+    "express": "4.17.1",
+    "typescript": "3.8.3",
+    "@types/express": "4.17.3",
+    "@types/node": "13.9.0"
+  },
+  "engines": {
+    "node": "10.x.x"
   },
   "license": "MIT",
-  "dependencies": {
-    "express": "4.17.1"
-  }
+  "main": "index.js",
+  "name": "excalidraw-io",
+  "scripts": {
+    "deploy": "gcloud app deploy --project=excalidraw-io",
+    "gcp-build": "tsc -p .",
+    "prepare": "yarn gcp-build",
+    "pretest": "yarn gcp-build",
+    "start": "node ./index.js"
+  },
+  "version": "1.0.0"
 }
