--- a/package.json
+++ b/package.json
@@ -7,19 +7,37 @@
     "socket.io": "2.3.0",
     "typescript": "3.8.3"
   },
+  "devDependencies": {
+    "husky": "4.2.3",
+    "lint-staged": "10.0.8",
+    "prettier": "1.19.1"
+  },
   "engines": {
     "node": "10.x.x"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "license": "MIT",
+  "lint-staged": {
+    "*.{ts,md,json,yaml,yml}": [
+      "prettier --write"
+    ]
+  },
   "main": "index.js",
   "name": "excalidraw-room",
   "scripts": {
     "build": "yarn gcp-build",
     "deploy": "gcloud app deploy --project=excalidraw-room",
+    "fix": "yarn prettier --write",
     "gcp-build": "tsc -p .",
     "prepare": "yarn gcp-build",
     "pretest": "yarn gcp-build",
-    "start": "node ./index.js"
+    "prettier": "prettier \"**/*.{ts,md,json,yaml,yml}\"",
+    "start": "node ./index.js",
+    "test": "yarn prettier --list-different"
   },
   "version": "1.0.0"
 }
