Add GitHub action for linting

--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "deploy": "gcloud app deploy --project=excalidraw-room",
     "fix": "yarn prettier --write",
     "gcp-build": "tsc -p .",
+    "lint": "yarn prettier --list-different",
     "prepare": "yarn gcp-build",
     "pretest": "yarn gcp-build",
     "prettier": "prettier \"**/*.{ts,md,json,yaml,yml}\"",
-    "start": "node ./index.js",
-    "test": "yarn prettier --list-different"
+    "start": "node ./index.js"
   },
   "version": "1.0.0"
 }
