--- a/package.json
+++ b/package.json
@@ -1,40 +1,68 @@
 {
+  "name": "collab-server",
+  "version": "1.0.0",
+  "description": "Excalidraw collaboration server",
+  "main": "index.js",
+  "scripts": {
+    "build": "tsc",
+    "postinstall": "npm run build",
+    "start": "node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/idlewinn/collab-server.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/idlewinn/collab-server/issues"
+  },
+  "homepage": "https://github.com/idlewinn/collab-server#readme",
   "dependencies": {
-    "@types/express": "4.17.3",
-    "@types/node": "13.9.0",
-    "@types/socket.io": "2.1.4",
-    "express": "4.17.1",
-    "socket.io": "2.3.0",
-    "typescript": "3.8.3"
+    "@types/socket.io": "^2.1.4",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-plugin-prettier": "3.1.2",
+    "express": "^4.17.1",
+    "prettier": "1.19.1",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "husky": "4.2.3",
-    "lint-staged": "10.0.8",
-    "prettier": "1.19.1"
+    "@types/express": "^4.17.3",
+    "@types/node": "^13.9.0",
+    "typescript": "^3.8.3"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
+  "eslintConfig": {
+    "extends": [
+      "prettier"
+    ],
+    "plugins": [
+      "prettier"
+    ],
+    "rules": {
+      "curly": "warn",
+      "no-console": [
+        "warn",
+        {
+          "allow": [
+            "warn",
+            "error",
+            "info"
+          ]
+        }
+      ],
+      "no-else-return": "warn",
+      "no-useless-return": "warn",
+      "prefer-const": [
+        "warn",
+        {
+          "destructuring": "all"
+        }
+      ],
+      "prefer-template": "warn",
+      "prettier/prettier": "warn"
     }
-  },
-  "license": "MIT",
-  "lint-staged": {
-    "*.{ts,md,json,yaml,yml}": [
-      "prettier --write"
-    ]
-  },
-  "main": "index.js",
-  "name": "excalidraw-room",
-  "scripts": {
-    "build": "yarn gcp-build",
-    "deploy": "gcloud app deploy --project=excalidraw-room",
-    "fix": "yarn prettier --write",
-    "gcp-build": "tsc -p .",
-    "prepare": "yarn gcp-build",
-    "pretest": "yarn gcp-build",
-    "prettier": "prettier \"**/*.{ts,md,json,yaml,yml}\"",
-    "start": "node ./index.js",
-    "test": "yarn prettier --list-different"
-  },
-  "version": "1.0.0"
+  }
 }
