--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "fix": "yarn prettier --write",
+    "lint": "yarn prettier --list-different",
     "postinstall": "npm run build",
+    "prettier": "prettier \"**/*.{ts,md,json,yaml,yml}\"",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "yarn lint"
   },
   "repository": {
     "type": "git",
