--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/excalidraw/excalidraw-room#readme",
   "dependencies": {
-    "@types/socket.io": "^2.1.4",
+    "debug": "^4.1.1",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-prettier": "3.1.2",
@@ -33,6 +33,8 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "@types/socket.io": "^2.1.4",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.3",
     "@types/node": "^13.9.0",
     "typescript": "^3.8.3"
