--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,22 +1,22 @@
-name: Lint
+name: Test
 
 on:
   push:
 
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v1
 
-      - name: Setup Node.js 12.x
+      - name: Setup Node.js 14.x
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: 14.x
 
       - name: Install dependencies
         run: yarn
 
-      - name: Lint
-        run: yarn lint
+      - name: Test
+        run: yarn test
