--- a/package.json
+++ b/package.json
@@ -1,38 +1,26 @@
 {
-  "name": "excalidraw-room",
-  "version": "1.0.0",
-  "description": "Excalidraw collaboration server",
-  "main": "index.js",
+  "name": "excalidraw-portal",
+  "dependencies": {
+    "@types/debug": "4.1.5",
+    "@types/express": "4.17.11",
+    "@types/node": "14.14.12",
+    "@types/socket.io": "2.1.4",
+    "debug": "4.3.1",
+    "express": "4.17.1",
+    "prettier": "2.2.1",
+    "socket.io": "2.3.0",
+    "typescript": "4.1.3"
+  },
+  "license": "MIT",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "deploy": "yarn build && gcloud app deploy --project=excalidraw-portal",
     "format": "yarn prettier --write",
     "lint": "yarn prettier --list-different",
     "prettier": "prettier \"**/*.{ts,md,json,yaml,yml}\"",
     "start": "node dist/index.js",
     "test": "yarn lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/excalidraw/excalidraw-room.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/excalidraw/excalidraw-room/issues"
-  },
-  "homepage": "https://github.com/excalidraw/excalidraw-room#readme",
-  "dependencies": {
-    "debug": "4.3.1",
-    "express": "4.17.1",
-    "prettier": "2.2.1",
-    "socket.io": "2.3.0"
-  },
-  "devDependencies": {
-    "@types/socket.io": "2.1.4",
-    "@types/debug": "4.1.5",
-    "@types/express": "4.17.11",
-    "@types/node": "14.14.12",
-    "typescript": "4.1.3"
-  }
+  "version": "1.0.0"
 }
