--- a/package.json
+++ b/package.json
@@ -1,72 +1,25 @@
 {
-  "name": "excalidraw-room",
-  "version": "1.0.0",
-  "description": "Excalidraw collaboration server",
-  "main": "index.js",
+  "name": "excalidraw-portal",
+  "dependencies": {
+    "@types/debug": "4.1.5",
+    "@types/express": "4.17.11",
+    "@types/node": "14.14.21",
+    "@types/socket.io": "2.1.4",
+    "debug": "4.3.1",
+    "express": "4.17.1",
+    "prettier": "2.2.1",
+    "socket.io": "2.3.0",
+    "typescript": "4.1.3"
+  },
+  "license": "MIT",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "fix": "yarn prettier --write",
+    "format": "yarn prettier --write",
     "lint": "yarn prettier --list-different",
     "prettier": "prettier \"**/*.{ts,md,json,yaml,yml}\"",
     "start": "node dist/index.js",
     "test": "yarn lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/excalidraw/excalidraw-room.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/excalidraw/excalidraw-room/issues"
-  },
-  "homepage": "https://github.com/excalidraw/excalidraw-room#readme",
-  "dependencies": {
-    "debug": "4.3.1",
-    "eslint": "7.3.1",
-    "eslint-config-prettier": "7.0.0",
-    "eslint-plugin-prettier": "3.3.1",
-    "express": "4.17.1",
-    "prettier": "2.2.1",
-    "socket.io": "2.3.0"
-  },
-  "devDependencies": {
-    "@types/socket.io": "2.1.4",
-    "@types/debug": "4.1.5",
-    "@types/express": "4.17.11",
-    "@types/node": "14.14.12",
-    "typescript": "4.1.3"
-  },
-  "eslintConfig": {
-    "extends": [
-      "prettier"
-    ],
-    "plugins": [
-      "prettier"
-    ],
-    "rules": {
-      "curly": "warn",
-      "no-console": [
-        "warn",
-        {
-          "allow": [
-            "warn",
-            "error",
-            "info"
-          ]
-        }
-      ],
-      "no-else-return": "warn",
-      "no-useless-return": "warn",
-      "prefer-const": [
-        "warn",
-        {
-          "destructuring": "all"
-        }
-      ],
-      "prefer-template": "warn",
-      "prettier/prettier": "warn"
-    }
-  }
+  "version": "1.0.0"
 }
