--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "4.17.1",
     "prettier": "2.2.1",
     "socket.io": "2.3.0",
+    "ts-node-dev": "1.1.1",
     "typescript": "4.1.3"
   },
   "license": "MIT",
@@ -20,6 +21,7 @@
     "lint": "yarn prettier --list-different",
     "prettier": "prettier \"**/*.{ts,md,json,yaml,yml}\"",
     "start": "node dist/index.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "yarn lint"
   },
   "version": "1.0.0"
