--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "excalidraw-portal",
   "dependencies": {
+    "express": "4.17.1",
+    "socket.io": "2.3.0"
+  },
+  "devDependencies": {
     "@types/debug": "4.1.5",
     "@types/express": "4.17.11",
     "@types/node": "14.14.21",
     "@types/socket.io": "2.1.4",
     "debug": "4.3.1",
-    "express": "4.17.1",
     "prettier": "2.2.1",
-    "socket.io": "2.3.0",
     "ts-node-dev": "1.1.1",
     "typescript": "4.1.3"
   },
