--- a/app.yaml
+++ b/app.yaml
@@ -2,10 +2,8 @@ runtime: nodejs
 env: flex
 
 # https://cloud.google.com/appengine/docs/flexible/nodejs/configuring-your-app-with-app-yaml
-automatic_scaling:
-  min_num_instances: 1
-  max_num_instances: 4
-  cool_down_period_sec: 180
+manual_scaling:
+  instances: 1
 resources:
   cpu: 1
   memory_gb: 0.5
