--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "excalidraw-portal",
   "dependencies": {
+    "@excalidraw/prettier-config": "1.0.1",
     "@types/debug": "4.1.5",
     "@types/express": "4.17.11",
     "@types/node": "14.14.31",
@@ -14,6 +14,8 @@
   },
   "license": "MIT",
   "main": "dist/index.js",
+  "name": "excalidraw-portal",
+  "prettier": "@excalidraw/prettier-config",
   "scripts": {
     "build": "tsc",
     "format": "yarn prettier --write",
