--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,17 +6,13 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v1
-
       - name: Setup Node.js 14.x
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
-
       - name: Install dependencies
-        run: yarn
-
+        run: yarn --frozen-lockfile
       - name: Lint
-        run: yarn lint
+        run: yarn test:other
