--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "dependencies": {
+    "@excalidraw/eslint-config": "1.0.0",
     "@excalidraw/prettier-config": "1.0.1",
     "@types/debug": "4.1.5",
     "@types/express": "4.17.11",
     "@types/node": "14.14.31",
     "@types/socket.io": "2.1.4",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
     "debug": "4.3.1",
+    "eslint": "7.21.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-prettier": "3.3.1",
     "express": "4.17.1",
     "prettier": "2.2.1",
     "socket.io": "2.3.0",
@@ -18,12 +24,15 @@
   "prettier": "@excalidraw/prettier-config",
   "scripts": {
     "build": "tsc",
-    "format": "yarn prettier --write",
-    "lint": "yarn prettier --list-different",
-    "prettier": "prettier \"**/*.{ts,md,json,yaml,yml}\"",
+    "fix:code": "yarn test:code --fix",
+    "fix:other": "yarn prettier --write",
+    "fix": "yarn fix:other && yarn fix:code",
+    "prettier": "prettier . --ignore-path=.gitignore",
     "start": "node dist/index.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "test": "yarn lint"
+    "test:code": "eslint --ext .ts .",
+    "test:other": "yarn prettier --list-different",
+    "test": "yarn test:other && yarn test:code"
   },
   "version": "1.0.0"
 }
