--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/socket.io": "2.1.4",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "cross-env": "^7.0.3",
     "debug": "4.3.1",
     "dotenv": "^10.0.0",
     "eslint": "7.21.0",
@@ -16,7 +17,7 @@
     "express": "4.17.1",
     "prettier": "2.2.1",
     "socket.io": "2.3.0",
-    "ts-node-dev": "1.1.6",
+    "ts-node-dev": "^1.1.8",
     "typescript": "4.2.3"
   },
   "license": "MIT",
@@ -30,7 +31,7 @@
     "fix": "yarn fix:other && yarn fix:code",
     "prettier": "prettier . --ignore-path=.gitignore",
     "start": "node dist/index.js",
-    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "start:dev": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
     "test:code": "eslint --ext .ts .",
     "test:other": "yarn prettier --list-different",
     "test": "yarn test:other && yarn test:code"
