--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "@types/debug": "4.1.5",
     "@types/express": "4.17.11",
     "@types/node": "14.14.31",
-    "@types/socket.io": "2.1.4",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
     "cross-env": "^7.0.3",
@@ -16,7 +15,7 @@
     "eslint-plugin-prettier": "3.3.1",
     "express": "4.17.1",
     "prettier": "2.2.1",
-    "socket.io": "2.3.0",
+    "socket.io": "^4.6.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "4.2.3"
   },
