--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "4.17.1",
     "prettier": "2.2.1",
     "socket.io": "2.3.0",
+    "socket.io-redis": "5.x",
     "ts-node-dev": "^1.1.8",
     "typescript": "4.2.3"
   },
@@ -35,6 +36,5 @@
     "test:code": "eslint --ext .ts .",
     "test:other": "yarn prettier --list-different",
     "test": "yarn test:other && yarn test:code"
-  },
-  "version": "1.0.0"
+  }
 }
