--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "dependencies": {
     "@excalidraw/eslint-config": "1.0.1",
     "@excalidraw/prettier-config": "1.0.2",
+    "@types/cors": "^2.8.13",
     "@types/debug": "4.1.5",
     "@types/express": "4.17.11",
     "@types/node": "14.14.31",
     "@types/socket.io": "2.1.4",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "debug": "4.3.1",
     "dotenv": "^10.0.0",
-    "eslint": "7.21.0",
+    "eslint": "^7.21.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
     "express": "4.17.1",
@@ -19,7 +21,8 @@
     "socket.io": "2.3.0",
     "socket.io-redis": "5.x",
     "ts-node-dev": "^1.1.8",
-    "typescript": "4.2.3"
+    "typescript": "4.2.3",
+    "yarn": "^1.22.19"
   },
   "license": "MIT",
   "main": "dist/index.js",
