--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@excalidraw/eslint-config": "1.0.1",
     "@excalidraw/prettier-config": "1.0.2",
+    "@socket.io/redis-adapter": "^8.2.1",
     "@types/debug": "4.1.5",
     "@types/express": "4.17.11",
     "@types/node": "14.14.31",
@@ -15,7 +16,9 @@
     "eslint-plugin-prettier": "3.3.1",
     "express": "4.17.1",
     "prettier": "2.2.1",
-    "socket.io": "^4.6.1",
+    "redis": "^4.6.7",
+    "socket.io": "^4.7.2",
+    "socket.io-redis": "^6.1.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "4.2.3"
   },
